--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>satakolkyt</title>
     <script>
-      if('serviceWorker' in navigator) {
+      /*if('serviceWorker' in navigator) {
         navigator.serviceWorker.register('/sw.js', { scope: '/' })
           .then(function(registration) {
                 console.log('Service Worker Registered');
@@ -16,6 +16,7 @@
            console.log('Service Worker Ready');
         });
       }
+      */
       </script>
   </head>
   <body>
