--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,13 @@
         });
       }
       */
+      (function(){
+        var redirect = sessionStorage.redirect;
+        delete sessionStorage.redirect;
+        if (redirect && redirect != location.href) {
+            history.replaceState(null, null, redirect);
+        }
+      })();
       </script>
   </head>
   <body>
