improve IE warning

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,12 @@
     </noscript>
     <script>
       if (navigator.userAgent.indexOf("Trident") != -1) {
-        document.body.outerHTML = "<p>Emme tue selaintanne.</p>"
+        document.body.outerHTML = "<h1>Satakolkyt</h1>" +
+        "<img src='./img/fish.gif' />" +
+        "<p>Hups... selaimesi on liian vanha.</p>" +
+        "<p>Tulethan sivullemme tukemillamme selaimilla." +
+        "<p>Tukemamme selaimet ovat Microsoft Edge, Mozilla Firefox, Google Chrome ja Apple Safari</p>" +
+        "<p>Jos kysyttävää. Otathan yhteyttä hankekoordinaattori Eeva Puustjärveen eeva.puustjarvi@hel.fi"
       } else {
         null
       }
